@@ -1,6 +1,9 @@
 v0.9.0
 -------------------
 ! link to SearchPlotWriters was pointing to wrong server
++ added gzip support to cache (Jörg Eitemüller)
++ added support for tv series (Jörg Eitemüller) - new methods:
+  episodes() and seasons()
 
 v0.8.9 (07.10.2007)
 -------------------
